Closed Bug 1176083 Opened 9 years ago Closed 9 years ago

kill nsJSScriptTimeoutHandler::Init

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: tromey, Assigned: bzbarsky)

Details

Attachments

(1 file, 1 obsolete file)

This came from https://bugzilla.mozilla.org/show_bug.cgi?id=1148593#c52
There, bz wrote:

> nsJSScriptTimeoutHandler::Init... I think that code is basically dead.  We should kill
> it off; file a followup bug please?
I claim this code is dead because on the one hand it's no longer called from JS
(because Window is always on WebIDL bindings, but on the other hand it can't
really be called from C++ because it depends on examining the XPConnect call
information.

I think removing this completely, including from the IDL, is safe, because
nothing directly returns nsIDOMJSWindow, so anyone using its vtable would have
to QI to it and we're changing the IID.
Attachment #8624587 - Flags: review?(jst)
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
I claim this code is dead because on the one hand it's no longer called from JS
(because Window is always on WebIDL bindings, but on the other hand it can't
really be called from C++ because it depends on examining the XPConnect call
information.

I think removing this completely, including from the IDL, is safe, because
nothing directly returns nsIDOMJSWindow, so anyone using its vtable would have
to QI to it and we're changing the IID.
Attachment #8624592 - Flags: review?(jst)
Attachment #8624587 - Attachment is obsolete: true
Attachment #8624587 - Flags: review?(jst)
Attachment #8624592 - Flags: review?(jst) → review?(bugs)
Comment on attachment 8624592 [details] [diff] [review]
Remove the now-dead code for the XPCOM version of setTimeout/setInterval

Nice.
Attachment #8624592 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/4267b74ee795
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: