Bug 1176083.  Remove the now-dead code for the XPCOM version of setTimeout/setInterval.  r=smaug

I claim this code is dead because on the one hand it's no longer called from JS
(because Window is always on WebIDL bindings, but on the other hand it can't
really be called from C++ because it depends on examining the XPConnect call
information.

I think removing this completely, including from the IDL, is safe, because
nothing directly returns nsIDOMJSWindow, so anyone using its vtable would have
to QI to it and we're changing the IID.